update feature