@@ -45,22 +45,13 @@ public class GroupServiceImpl implements GroupService {
     public void createGroups(GroupDtoRequest request, Map<String, List<String>> errors) {
         User userLoggedIn = userHelper.getUserLogin();
 
-        //check group name duplicate
-        var groupOptional = optionalValidator.findByGroupName(request.getName(), 0L);
-        if (groupOptional.isPresent()) {
-            validationService.updateErrors("name", "Group name already exists", errors);
-        }
+        // Check for duplicate group name
+        optionalValidator.findByGroupName(request.getName(), 0L)
+                .ifPresent(group -> validationService.updateErrors("name", "Group name already exists", errors));
 
-        //check validate email exist in database
-        String messages = request.getUsersIds().stream()
-                .filter(id -> userRepository.findByIdAndActive(id)
-                        .isEmpty())
-                .map(String::valueOf)
-                .collect(Collectors.joining(", "));
-
-        // Mail is not exist
-        if (!messages.isEmpty()) {
-            validationService.updateErrors("usersIds", "Something went wrong", errors);
+        // Check if any user IDs in the request do not exist in the database
+        if (request.getUsersIds().stream().anyMatch(id -> userRepository.findByIdAndActive(id).isEmpty())) {
+            validationService.updateErrors("usersIds", "Invalid user IDs", errors);
         }
 
         if (!errors.isEmpty()) return;
@@ -81,7 +72,7 @@ public class GroupServiceImpl implements GroupService {
         //create user group
         List<UserGroup> userGroups = new ArrayList<>();
         for (var id : request.getUsersIds()) {
-            User user = userRepository.findById(id).orElse(null);
+            User user = userRepository.findById(id).orElseThrow();
             UserGroup userGroup = UserGroup.builder()
                     .group(group)
                     .user(user)
@@ -96,67 +87,61 @@ public class GroupServiceImpl implements GroupService {
     public void updateGroups(GroupDtoRequest request, Map<String, List<String>> errors) {
         User userLoggedIn = userHelper.getUserLogin();
 
-        Group groupExist = groupRepository.findById(request.getId()).orElse(null);
-        if (groupExist == null) {
+        Group groupExist = groupRepository.findById(request.getId()).orElseGet(() -> {
             validationService.updateErrors("id", "Group not found: " + request.getId(), errors);
-        }
+            return null;
+        });
 
-        //check group name duplicate
-        var groupOptional = optionalValidator.findByGroupName(request.getName(), request.getId());
-        if (groupOptional.isPresent()) {
-            validationService.updateErrors("name", "Group name already exists", errors);
-        }
+        optionalValidator.findByGroupName(request.getName(), request.getId()).ifPresent(group ->
+                validationService.updateErrors("name", "Group name already exists", errors)
+        );
 
         //check validate email exist in database
-        String messages = request.getUsersIds().stream()
-                .filter(id -> userRepository.findByIdAndActive(id)
-                        .isEmpty())
+        // Check if any user IDs in the request do not exist in the database
+        String invalidUserIds = request.getUsersIds().stream()
+                .filter(id -> userRepository.findByIdAndActive(id).isEmpty())
                 .map(String::valueOf)
                 .collect(Collectors.joining(", "));
 
-        // Mail is not exist
-        if (!messages.isEmpty()) {
-            validationService.updateErrors("usersIds", "Something went wrong", errors);
+        if (!invalidUserIds.isEmpty()) {
+            validationService.updateErrors("usersIds", "Invalid user IDs: " + invalidUserIds, errors);
         }
 
         if (!errors.isEmpty()) return;
 
-        //update list email
-        //user was existed in group
+        // Update users in the group
         assert groupExist != null;
-        var userExist = groupExist.getUserGroups().stream()
+        List<Long> existingUserIds = groupExist.getUserGroups().stream()
                 .map(UserGroup::getUser)
                 .map(User::getId)
                 .toList();
 
-        //user request
-        var userRequestList = request.getUsersIds().stream()
-                .map(id -> userRepository.findById(id).orElseThrow())
-                .map(User::getId)
-                .toList();
+        List<Long> requestedUserIds = request.getUsersIds();
 
-        var userDeletes = userExist.stream()
-                .filter(userId -> !userRequestList.contains(userId))
-                .map(u -> userGroupRepository.findByUserIdAndGroupId(u, groupExist.getId()).orElseThrow())
-                .toList();
+        // Identify users to delete
+        List<UserGroup> userGroupsToDelete = existingUserIds.stream()
+                .filter(userId -> !requestedUserIds.contains(userId))
+                .map(userId -> userGroupRepository.findByUserIdAndGroupId(userId, groupExist.getId()).orElseThrow())
+                .collect(Collectors.toList());
 
-        if (!userDeletes.isEmpty()) {
-            userGroupRepository.deleteAll(userDeletes);
+        if (!userGroupsToDelete.isEmpty()) {
+            userGroupRepository.deleteAll(userGroupsToDelete);
         }
 
-        //user adding: có trong request mà no có trong database
-        var userAdditions = userRequestList.stream()
-                .filter(userId -> !userExist.contains(userId))
-                .map(u -> UserGroup.builder()
+        // Identify users to add
+        List<UserGroup> userGroupsToAdd = requestedUserIds.stream()
+                .filter(userId -> !existingUserIds.contains(userId))
+                .map(userId -> UserGroup.builder()
                         .group(groupExist)
-                        .user(userRepository.findById(u).orElseThrow())
-                        .build()
-                )
+                        .user(userRepository.findById(userId).orElseThrow())
+                        .build())
                 .toList();
 
-        if (!userAdditions.isEmpty()) {
-            userGroupRepository.saveAll(userAdditions);
+        if (!userGroupsToAdd.isEmpty()) {
+            userGroupRepository.saveAll(userGroupsToAdd);
         }
+
+        // Update group details
         groupExist.setUpdateBy(userLoggedIn.getId());
         groupExist.setUpdateAt(LocalDateTime.now());
         groupExist.setName(request.getName());
@@ -166,9 +151,9 @@ public class GroupServiceImpl implements GroupService {
 
     @Override
     public GroupDtoResponse getGroupById(Long id) {
-        Group group = groupRepository.findById(id).orElse(null);
-        if (group == null) return null;
-        return GroupMapper.toGroupDtoResponse(group);
+        return groupRepository.findById(id)
+                .map(GroupMapper::toGroupDtoResponse)
+                .orElse(null);
     }
 
     @Override
@@ -177,7 +162,7 @@ public class GroupServiceImpl implements GroupService {
     }
 
     @Override
-    public boolean changeStatus(Long id) {
+    public void changeStatus(Long id) {
         User userLoggedIn = userHelper.getUserLogin();
         var groupOptional = groupRepository.findById(id);
         if (groupOptional.isPresent()) {
@@ -186,9 +171,7 @@ public class GroupServiceImpl implements GroupService {
             group.setUpdateBy(userLoggedIn.getId());
             group.setStatus(!group.isStatus());
             groupRepository.save(group);
-            return true;
         }
-        return false;
     }
 
     @Override
